// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`test floating-panel component slots > test floating-panel component default 1`] = `
"<div class=\\"var-floating-panel\\" style=\\"height: 460.79999999999995px; transform: translateY(calc(100% - 100px)); transition: transform 0.3ms cubic-bezier(0.18, 0.89, 0.32, 1.28);\\">
  <div class=\\"var-floating-panel__header\\">
    <div class=\\"var-floating-panel__header-bar\\"></div>
  </div>
  <div class=\\"var-floating-panel__content\\">Hello Varlet!</div>
</div>"
`;

exports[`test floating-panel components props > test floating-panel anchor 1`] = `
"<div class=\\"var-floating-panel\\" style=\\"height: 460.79999999999995px; transform: translateY(calc(100% - 460.79999999999995px)); transition: none;\\">
  <div class=\\"var-floating-panel__header\\">
    <div class=\\"var-floating-panel__header-bar\\"></div>
  </div>
  <div class=\\"var-floating-panel__content\\"></div>
</div>"
`;

exports[`test floating-panel components props > test floating-panel anchor 2`] = `
"<div class=\\"var-floating-panel\\" style=\\"height: 460.79999999999995px; transform: translateY(calc(100% - 100px)); transition: none;\\">
  <div class=\\"var-floating-panel__header\\">
    <div class=\\"var-floating-panel__header-bar\\"></div>
  </div>
  <div class=\\"var-floating-panel__content\\"></div>
</div>"
`;

exports[`test floating-panel components props > test floating-panel contentDraggable 1`] = `
"<div class=\\"var-floating-panel\\" style=\\"height: 460.79999999999995px; transform: translateY(calc(100% - 460.79999999999995px)); transition: none;\\">
  <div class=\\"var-floating-panel__header\\">
    <div class=\\"var-floating-panel__header-bar\\"></div>
  </div>
  <div class=\\"var-floating-panel__content\\"></div>
</div>"
`;

exports[`test floating-panel components props > test floating-panel contentDraggable 2`] = `
"<div class=\\"var-floating-panel\\" style=\\"height: 460.79999999999995px; transform: translateY(calc(100% - 460.79999999999995px)); transition: none;\\">
  <div class=\\"var-floating-panel__header\\">
    <div class=\\"var-floating-panel__header-bar\\"></div>
  </div>
  <div class=\\"var-floating-panel__content\\"></div>
</div>"
`;

exports[`test floating-panel components props > test floating-panel duration 1`] = `
"<div class=\\"var-floating-panel\\" style=\\"height: 460.79999999999995px; transform: translateY(calc(100% - 100px)); transition: transform 0.4ms cubic-bezier(0.18, 0.89, 0.32, 1.28);\\">
  <div class=\\"var-floating-panel__header\\">
    <div class=\\"var-floating-panel__header-bar\\"></div>
  </div>
  <div class=\\"var-floating-panel__content\\"></div>
</div>"
`;
